# solar-sailer

./: Cargo.toml  README.md
res/solar_sailer/: color_cube.glb
src/: main.rs  root.rs  solar_sailer.rs
